2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Moved the
	  SetCaretTo to the mono.texteditor.

2010-07-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Track API
	  changes.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Track API
	  changes.

2010-07-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: added null
	  check.-

2010-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed 'Bug
	  622214 - NullReferenceException when closing file tab'.

2010-07-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Unsubscribe
	  the recently added file change events, check if the widget's
	  disposed to avoid NRE, and avoid an unnecessary closure
	  creation.

2010-07-13  Levi Bard <levi@unity3d.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	  Also respond to FileService events.

2010-07-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* gtk-gui/objects.xml:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/NavigationBar.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/ISourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs:
	* MonoDevelop.SourceEditor/NavigationBarCommands.cs:
	* MonoDevelop.SourceEditor/StyledSourceEditorOptions.cs:
	* MonoDevelop.SourceEditor.OptionPanels/GeneralOptionsPanel.cs:
	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs:
	  Removed old unused quick finder code/moved dropdownbox to
	  components.

2010-07-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Replaced
	  custom workerthread with